Fixed Spacing

--- a/website/css/housing.css
+++ b/website/css/housing.css
@@ -245,6 +245,9 @@ element.style {
     #societies-table_info{
         display:none !important;
     }
+    .housing-card{
+        padding:0;
+    }
 
 }
 
